// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TourSetting /> handleLogicalSwitchChange() To match snapshots 1`] = `<div />`;

exports[`<TourSetting /> handleSwitchChange() To match snapshots 1`] = `<div />`;

exports[`<TourSetting /> render() should render correctly 1`] = `
<div>
  <WithStyles(GridContainer)
    alignItems="center"
    wrap="nowrap"
  >
    <WithStyles(GridItem)>
      <WithStyles(GridContainer)
        alignItems="center"
        direction="row"
        justify="flex-start"
        spacing={0}
      >
        <WithStyles(GridItem)>
          <WithStyles(JTextClass)
            bold={true}
            gray={true}
            sm={true}
            uppercase={true}
          />
        </WithStyles(GridItem)>
        <WithStyles(GridItem)
          xs={true}
        >
          <WithStyles(GridContainer)
            alignItems="center"
            justify="flex-end"
          >
            <WithStyles(GridItem)>
              <WithStyles(SwitchField)
                disabled={false}
                onChange={[Function]}
                value={false}
              />
            </WithStyles(GridItem)>
          </WithStyles(GridContainer)>
        </WithStyles(GridItem)>
      </WithStyles(GridContainer)>
    </WithStyles(GridItem)>
  </WithStyles(GridContainer)>
</div>
`;

exports[`<TourSetting /> render() should render text only variant render prop 1`] = `<div />`;

exports[`<TourSetting /> render() should render text only variant render prop with action 1`] = `<div />`;

exports[`<TourSetting /> renderEditable() To match snapshots 1`] = `
<div>
  <WithStyles(GridContainer)
    alignItems="center"
    justify="space-between"
  >
    <WithStyles(GridItem)>
      <WithStyles(JTextClass)
        bold={true}
        gray={true}
        sm={true}
        uppercase={true}
      />
    </WithStyles(GridItem)>
    <WithStyles(GridItem)
      xs={true}
    >
      <WithStyles(EditableTextForm)
        fullWidth={true}
        name="setting"
        onSubmit={[Function]}
        options={Array []}
        value={null}
      />
    </WithStyles(GridItem)>
  </WithStyles(GridContainer)>
</div>
`;

exports[`<TourSetting /> renderLabel() should render correctly 1`] = `
<div>
  <WithStyles(TourSettingsLabel) />
</div>
`;

exports[`<TourSetting /> renderValue() To match snapshots 1`] = `
<div>
  <WithStyles(JTextClass)
    bold={true}
    gray={true}
    textRight={true}
  />
</div>
`;
